# eeg-ica-preprocessing

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: ICA.py  config.py  logger_config.yaml  logger_init.py  logging_config.py  main.py  run.py
src/assets/: filter_ica.py  loader.py
src/ica_tools/: csv_ica.py  filter_ica.py  viz_ica.py
