[project]
name = "template-origenesrd"
version = "0.1.0"
description = "Template for OrigenesRD repositories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "git-lfs==1.6",
    "numpy==1.26.0",
    "pandas==2.1.1",
    "python-dotenv==0.20.0",
    "pyyaml>=6.0.2",
    "requests~=2.28.1",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build  
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
