[project]
name = "ICA_preprocessing"
version = "0.1.0"
description = "A Python package for preprocessing EEG data using Independent Component Analysis (ICA) to remove artefacts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "git-lfs>=1.6",
    "mne==1.12.1",
    "pandas>=2.2.0",
    "python-dotenv>=0.20.0",
    "pyyaml>=6.0.2",
    "requests~=2.28.1",
    "scikit-learn>=1.7.2",
    "numpy==1.26",           #=2.4.6
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build  
)/
'''

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
